# aargau_wikidataprojekt

./: .gitignore  README.md  auftrag.md  notebook.ipynb  pyproject.toml
.ipynb_checkpoints/: notebook-checkpoint.ipynb
.ipynb_checkpoints/data/: wikidata_persons.csv
data/: wikidata_persons.csv
data/output/: matching_liste.csv  matching_liste.md
src/aargau_match/: __init__.py  exporters.py  matching.py  swisscovery.py  wikidata.py
