[project]
name = "aargau-match"
version = "0.1.0"
description = "Matching-Liste Wikidata Aargauer Bibliografie x swisscovery"
requires-python = ">=3.10"
dependencies = [
    "SPARQLWrapper>=2.0.0",
    "requests>=2.31.0",
    "pymarc>=5.1.0",
    "rapidfuzz>=3.6.0",
    "pandas>=2.2.0",
    "tqdm>=4.66.0",
    "jupyterlab>=4.0.0",
    "matplotlib>=3.8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
